# Cat-Printer

./: .dockerignore  .gitignore  .pylintrc  0-prepare.sh  0-transpile.sh  1-build.sh  CONTRIBUTING.md  COPYING  PKGBUILD  README.de_DE.md  README.md  README.zh-CN.md  README.zh_CN.md  TODO  dev-diary.txt  development.md  i18n.py  index.html  install.bat  install.sh  main.d.ts  main.js  main.py  printer.py  pyproject.toml  requirements.txt  server.py
additional/: i18n.py  ipp.py  pf2.py
build-android/: .p4a  0-build-android.sh  1-adb-install.sh  2-clean-up-build.sh  3-formal-build.sh  4-sign.sh  8-build-push.sh  9-adb-logcat.sh  README.md  blacklist.txt  build-deps.txt  fix-ndk-execs.py  manual-steps.md
build-common/: 0-bundle-all.sh  bundle.py  start.bat
build-container/: Containerfile  README.md  docker-compose.yml  entrypoint.sh
i18n.i18n/: i18n.md
pf2/: SIL OFL 1.1 and Bitstream Vera.txt  SIL Open Font License 1.1.txt  fantasque-24.pf2  font-credits.txt  noto-sans-24.pf2  roboto-24.pf2  times-24-i.pf2  times-24.pf2
printer_lib/: commander.py  i18n.py  ipp.py  models.py  pf2.py  text_print.py
readme.i18n/: README.de-DE.md  README.de_DE.md  README.zh-CN.md  README.zh-HK.md  README.zh-Hant-CN.md  README.zh-TW.md  README.zh_CN.md
systemd/: cat-printer.service
wasm/: 0-compile.sh  asconfig.json  image.d.ts  image.ts  package-lock.json  package.json  tsconfig.json
www/: 0-transpile.sh  _load.html  about.html  accessibility.js  all-scripts.txt  all_js.txt  custom-print.html  custom-print.js  dash-xml.js  i18n-ext.js  i18n.d.ts  i18n.js  image.d.ts  image.js  (+12 more)
(+39 files in other folders)
